[metadata]
name = mplime
version = attr: mplime.__version__
description = Minimal Patterns LIME
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Kohei Asano
author_email = asano@dais.is.tohoku.ac.jp

[options]
package_dir=
    =src
packages=find:
install_requires=
    requests

[options.packages.find]
where=src